css/style.css
body {
  margin: 0;
  font-family: 'Work Sans', sans-serif;
  font-size: 16px;
  line-height: 1.8em;
  background-color: #202325;
}

canvas {
  display: block;
  vertical-align: bottom;
  position: absolute;
}

/* ---- particles.js container ---- */
#particles-js {
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: #202325;
  background-image: url('');
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}


.body-particles {
  position: absolute;
  top: 0;
  left: 0;
  background-color: transparent;
  z-index: 100;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.profile {
  width: 200px;
  height: 200px;
}

.underline {
  padding-bottom: 15px;
  display: inline-block;
  border-bottom: solid #39719e 10px;
}

h1 {
  font-size: 40px;
  font-weight: bold;
  color: white;
}

h2 {
  line-height: 1.8em;
  font-size: 32px;
  font-weight: bold;
  color: white;
}

h3 {
  font-size: 24px;
  color: white;
}

nav {
  background-color: transparent;
  box-shadow: none;
}

nav ul li a {
  background-color: transparent;
  opacity: 0.8;
}

nav ul li a:hover {
  background-color: transparent;
  opacity: 1;
}

.btn-list {
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.action-btn {
  color: white;
  border: 1px white solid;
  padding: 15px 30px;
  margin-right: 30px;
  border-radius: 40px;
}

.action-btn:hover {
  color: #202325;
  background-color: white;
}

.action-btn-2 {
  color: white;
  border: 1px white solid;
  padding: 15px 30px;
  border-radius: 40px;
}

.action-btn-2:hover {
  color: #202325;
  background-color: white;
}

.double-space {
  line-height: 2;
}

.emphasize {
  padding-bottom: 5px;
  font-weight: bold;
  border-bottom: solid #39719e 7px;
}

.emphasize-red {
  padding-bottom: 5px;
  font-weight: bold;
  border-bottom: solid #f16c7a 7px;
}

.emphasize-yellow {
  padding-bottom: 5px;
  font-weight: bold;
  border-bottom: solid #f1dd38 7px;
}

.word-link, .word-link-1 {
  padding-top: 10px;
  color: inherit;
}



.word-link-1 {
  margin-right: 30px;
}

.social-list {
  padding-top: 30px;
  color: white;
  opacity: 1;
}

.block-card {
  padding-bottom: 5%;
}

.modal-pic {
  width: 200px;
  height: 150px;
  border: solid #202325 1px;
}

.x-modal:hover {
  cursor: pointer;
}

